force-app/main/default/objects/leankor__TimeCard__c/leankor__TimeCard__c.object-meta.xml
<CustomObject>
    <description>A simple object for collecting time against Kanban Cards. If other enterprise modules extend the base Leankor package, this object may be superseded by an industry specific implementation.</description>
    <label>Time Card</label>
    <nameField>
        <displayFormat>TC-{000000000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>