force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__ActualHours__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActualHours__c</fullName>
    <description>The time card actual duration expressed in hours.</description>
    <formula>leankor__Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time card actual duration expressed in hours.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>