force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Assign_a_User__c.field-meta.xml
<CustomField>
    <fullName>leankor__Assign_a_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a user different than the one owning the card or owning a task has done some work, this field will hold that identified user.</description>
    <inlineHelpText>Select the user who has performed work on this card or task (if different than the existing owner).</inlineHelpText>
    <label>Assign a User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>