force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>leankor__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user assigned to the task.</description>
    <inlineHelpText>The user assigned to the task.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>