force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Date__c.field-meta.xml
<CustomField>
    <fullName>leankor__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date work was done. Does not allow date ranges or anything special.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date in which the majority of hours occurred.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>