force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Description__c.field-meta.xml
<CustomField>
    <fullName>leankor__Description__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>