force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Duration__c.field-meta.xml
<CustomField>
    <fullName>leankor__Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
                <default>true</default>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>