force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Estimation__c.field-meta.xml
<CustomField>
    <fullName>leankor__Estimation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>