force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__ExpenseAccount__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseAccount__c</fullName>
    <label>Expense Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Construction Estimators</fullName>
            </value>
            <value>
                <fullName>Control PCB Boards</fullName>
            </value>
            <value>
                <fullName>Craft Services / Food Services</fullName>
            </value>
            <value>
                <fullName>Crane Operators</fullName>
            </value>
            <value>
                <fullName>Electricians</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
            <value>
                <fullName>Inspection Specialist I</fullName>
            </value>
            <value>
                <fullName>Project Managers</fullName>
            </value>
            <value>
                <fullName>Ropes, rain gear</fullName>
            </value>
            <value>
                <fullName>Solar Panels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>