force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__ExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseCategory__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Depreciation of Assets/Equipment</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Manufactured Product</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Purchased Equipment</fullName>
            </value>
            <value>
                <fullName>Rental Equipment</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>