force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__ExpenseSubCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseSubCategory__c</fullName>
    <label>Expense Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Materials</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
            <value>
                <fullName>External Services</fullName>
            </value>
            <value>
                <fullName>General Services Fees</fullName>
            </value>
            <value>
                <fullName>Indirect Materials / Supplies</fullName>
            </value>
            <value>
                <fullName>Install Progress Invoices</fullName>
            </value>
            <value>
                <fullName>Internal Contractor</fullName>
            </value>
            <value>
                <fullName>Internal Employee</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Subscription Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>