force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Hours__c.field-meta.xml
<CustomField>
    <fullName>leankor__Hours__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of hours this time card is for</description>
    <inlineHelpText>Enter the number of hours worked. You can use decimals to record partial hours.</inlineHelpText>
    <label>Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>