force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__IsBillable__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsBillable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the time is billable or not.</description>
    <inlineHelpText>Is this billable?</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>