force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to Kanban Card rather than master-detail or any other type because this object was added late in the game and I don&apos;t want to break any Apex.</description>
    <inlineHelpText>Select the Kanban Card against-which this Time Card is applied.</inlineHelpText>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>TimeCards</relationshipName>
    <type>Lookup</type>
</CustomField>