force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__LogTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__LogTime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>