force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Notes__c.field-meta.xml
<CustomField>
    <fullName>leankor__Notes__c</fullName>
    <description>Some free-form notes about the time clocked.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional field. Enter some information about the work done.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>