force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Order__c.field-meta.xml
<CustomField>
    <fullName>leankor__Order__c</fullName>
    <description>This field contains Order number of TimeCard.</description>
    <inlineHelpText>This field contains Order number of TimeCard.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>