force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Subject__c.field-meta.xml
<CustomField>
    <fullName>leankor__Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>