force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__Task__c.field-meta.xml
<CustomField>
    <fullName>leankor__Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task</label>
    <length>40</length>
    <type>Text</type>
</CustomField>