force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__TaskDueDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__TaskDueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Due Date</label>
    <type>DateTime</type>
</CustomField>