force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__TimeCardCost__c.field-meta.xml
<CustomField>
    <fullName>leankor__TimeCardCost__c</fullName>
    <formula>leankor__ActualHours__c *  leankor__Assign_a_User__r.leankor__Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Card Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>