force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__TimeScheduleType__c.field-meta.xml
<CustomField>
    <fullName>leankor__TimeScheduleType__c</fullName>
    <description>Types of time schedules</description>
    <inlineHelpText>Select the type of time schedule.</inlineHelpText>
    <label>Time Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Break Time</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Personal Time</fullName>
            </value>
            <value>
                <fullName>Statutory Holiday</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>