force-app/main/default/objects/leankor__TimeCard__c/fields/leankor__TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>leankor__TimeSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Sheet</label>
    <referenceTo>leankor__TimeSheet__c</referenceTo>
    <relationshipLabel>TimeSheetTimeCards</relationshipLabel>
    <relationshipName>TimeCards</relationshipName>
    <type>Lookup</type>
</CustomField>