force-app/main/default/objects/leankor__TimeCard__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>leankor__Date__c</columns>
    <columns>leankor__KanbanCard__c</columns>
    <columns>leankor__Assign_a_User__c</columns>
    <columns>leankor__AssignedTo__c</columns>
    <columns>leankor__Description__c</columns>
    <columns>leankor__Notes__c</columns>
    <columns>leankor__Subject__c</columns>
    <columns>leankor__Task__c</columns>
    <columns>leankor__LogTime__c</columns>
    <columns>leankor__ActualHours__c</columns>
    <columns>leankor__TaskDueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>